# CPD

Lab1/: makefile  (+1 more)
Project/: CMakeLists.txt
Project/I/: Report_CPD.docx
Project/I/new/: I  board.c  board.h  board.h.gch  main.c  makefile  out-16.txt  strategies.c  strategies.h  strategies.h.gch
Project/I/new_com_omp/: board.c  board.h  main.c  makefile  stack.c  stack.h  strategies.c  strategies.h
Project/I/new_com_stack_sem_omp/: board.c  main.c  stack.c  strategies.c
Project/I/new_com_update/: board.c  board.h  main.c  strategies.c  strategies.h  utils.c  utils.h
Project/I/src/: CMakeLists.txt  I  a.out  board.c  board.h  board.h.gch  g  gmon.out  main.c  makefile  out  out.txt  parallel_dfs.out  queue.c  queue.h  queue.h.gch  stack.c  stack.h  stack.h.gch  strategies.c  strategies.h  strategies.h.gch  sudoku-omp  sudoku-omp.c  sudoku-omp.h  sudoku-serial  sudoku-serial.c  sudoku-serial.h  utils.c  utils.h  utils.h.gch
Project/I/tests/: 16x16_m.txt  16x16_nosol.txt  25x25.txt  9_full.txt
Project/II/: sudoku-mpi.err
Project/II/src/: 9ecM02area  9ecM05area  9ecm02area  aimeu  board.c  board.h  board.h.gch  condor-profile.txt  l  makefile  mynodes.txt  pppp  stat-S16x16N8  sudoku-mpi  sudoku-mpi.c  sudoku-mpi.err  sudoku-mpi.h  sudoku-mpi.out  sudoku-serial  sudoku-serial.c  test.c
Project/II/tests/: 25x25_easy.txt  9x9_zeros.txt
Project/faseI/: makefile
Project/src/: aux1.c  aux1.h  board.c  board.h  game.c  game.h  main.c  makefile  output1.txt  run.sh  strategies.c  strategies.h  sudo  sudoku  utils.c  utils.h
Project/src/tests/: game1.txt
(+75 files in other folders)
